slightly revised multiple-attributes API. The old get/setAttr methods are reinstated because it was just flooding the code with @Deprecated methods because of the primary accessors (ThreadInfo, ElementInfo). Added comments to all implementations that should make it clear that getAttr() might return a list (that has to be processed with ObjectList), and that setAttr() overwrites everything. There is a danger that people don't read and hence some listeners/peers are not multiple-attribute compatible, but if we would keep the deprecated methods those people would probably also ignore the compiler warnings. Even if they do, just renaming to get/setAttrList() would not have achieved much either - as long as we don't use containers to store the attributes, people could just use the wrong method. However, enforcing attribute containers even for single attrs (the normal case) seems overkill.
This means the core should refrain from using attributes for internal purposes, but given their runtime costs, this is probably a good idea anyways.